[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/HUD Assets/HealthProgressBarUnder.png" type="Texture" id=1]
[ext_resource path="res://Assets/HUD Assets/HUD-Border.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/Blocky5x5.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/HUD Assets/HealthProgressBarProg.png" type="Texture" id=4]
[ext_resource path="res://Assets/HUD Assets/TempProgressBarUnder.png" type="Texture" id=5]
[ext_resource path="res://Assets/HUD Assets/TempProgressBarProg.png" type="Texture" id=6]
[ext_resource path="res://Scenes/UI/HUD.gd" type="Script" id=7]
[ext_resource path="res://Assets/HUD Assets/AButtonP.png" type="Texture" id=8]
[ext_resource path="res://Assets/HUD Assets/BButtonN.png" type="Texture" id=9]
[ext_resource path="res://Assets/HUD Assets/BButtonP.png" type="Texture" id=10]
[ext_resource path="res://Assets/HUD Assets/AButtonN.png" type="Texture" id=11]
[ext_resource path="res://Assets/HUD Assets/DPadBtnP.png" type="Texture" id=12]
[ext_resource path="res://Assets/HUD Assets/DPadBtnN.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 6
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 7 )

[node name="HUDBorder" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="ScoreLbl" type="Label" parent="."]
margin_left = 83.0
margin_top = 14.0
margin_right = 111.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0.6, 0.6, 0.6, 1 )
text = "0000"
align = 2

[node name="LevelLbl" type="Label" parent="."]
margin_left = 304.0
margin_top = 14.0
margin_right = 322.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0.6, 0.6, 0.6, 1 )
text = "00"
align = 2

[node name="MissleLbl" type="Label" parent="."]
margin_left = 302.0
margin_top = 513.0
margin_right = 316.0
margin_bottom = 519.0
custom_colors/font_color = Color( 0.6, 0.6, 0.6, 1 )
text = "00"
align = 2

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = 47.0
margin_top = 510.0
margin_right = 140.0
margin_bottom = 521.0
max_value = 10.0
value = 10.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 4 )

[node name="TempBar" type="TextureProgress" parent="."]
margin_left = 238.0
margin_top = 510.0
margin_right = 297.0
margin_bottom = 521.0
max_value = 10.0
step = 0.1
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )

[node name="ABtn" type="TouchScreenButton" parent="."]
position = Vector2( 294, 533 )
normal = ExtResource( 11 )
pressed = ExtResource( 8 )
action = "a"

[node name="BBtn" type="TouchScreenButton" parent="."]
position = Vector2( 238, 575 )
normal = ExtResource( 9 )
pressed = ExtResource( 10 )
action = "b"

[node name="DPadR" type="TouchScreenButton" parent="."]
position = Vector2( 64, 561 )
normal = ExtResource( 13 )
pressed = ExtResource( 12 )
action = "right"

[node name="DPadL" type="TouchScreenButton" parent="."]
position = Vector2( 59, 596 )
rotation = -3.14159
normal = ExtResource( 13 )
pressed = ExtResource( 12 )
action = "left"

[node name="DPadU" type="TouchScreenButton" parent="."]
position = Vector2( 44, 576 )
rotation = -1.57079
normal = ExtResource( 13 )
pressed = ExtResource( 12 )
action = "up"

[node name="DPadD" type="TouchScreenButton" parent="."]
position = Vector2( 79, 581 )
rotation = -4.71238
normal = ExtResource( 13 )
pressed = ExtResource( 12 )
action = "down"

[connection signal="pressed" from="ABtn" to="." method="_on_ABtn_pressed"]
[connection signal="pressed" from="BBtn" to="." method="_on_BBtn_pressed"]
[connection signal="pressed" from="DPadR" to="." method="_on_DPadR_pressed"]
[connection signal="pressed" from="DPadL" to="." method="_on_DPadL_pressed"]
[connection signal="pressed" from="DPadU" to="." method="_on_DPadU_pressed"]
[connection signal="pressed" from="DPadD" to="." method="_on_DPadD_pressed"]
